# O-A-Rrei-o

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARREIO-A2A.md  ARREIO-MCP.md  BRIDGE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.cargo/: config.toml.example
crates/arreio-a2a/: Cargo.toml
crates/arreio-a2a/src/: lib.rs
crates/arreio-actors/: Cargo.toml
crates/arreio-actors/src/: actors.rs  compress.rs  context.rs  diff.rs  goal_monitor.rs  lib.rs  ollama.rs  planner.rs  refiner.rs  verifier.rs
crates/arreio-actors/src/prompts/: fragments.rs  mod.rs
crates/arreio-agents/: Cargo.toml
crates/arreio-agents/src/: a2a_dispatcher.rs  delegate.rs  lib.rs
crates/arreio-ast/: Cargo.toml
crates/arreio-ast/src/: lib.rs
crates/arreio-autopoiesis/: Cargo.toml
crates/arreio-autopoiesis/src/: autopoietic_system.rs  health_monitor.rs  lib.rs  mapek.rs  self_healing.rs
crates/arreio-benchmark/: Cargo.toml
crates/arreio-benchmark/src/: comparative.rs  eval.rs  lib.rs
crates/arreio-bridge-claude/: Cargo.toml
crates/arreio-bridge-claude/src/: lib.rs
crates/arreio-bridge-cursor/: Cargo.toml
crates/arreio-bridge-cursor/src/: lib.rs
crates/arreio-bridge-hermes/: Cargo.toml
crates/arreio-bridge-hermes/src/: lib.rs
crates/arreio-bridge-openclaw/: Cargo.toml
crates/arreio-bridge-openclaw/src/: lib.rs
crates/arreio-cli/: Cargo.toml
crates/arreio-cli/src/: batch_runner.rs  chat_transparent.rs  cmd_wiring.rs  docker.rs  environment.rs  hooks.rs  lib.rs  main.rs  plugins.rs  symbion_pipeline.rs
crates/arreio-commissioning/: Cargo.toml
crates/arreio-commissioning/src/: brief_generator.rs  lib.rs  report_generator.rs  self_commissioner.rs  stub_detector.rs
crates/arreio-contract/: Cargo.toml
crates/arreio-contract/src/: contract.rs  dbc.rs  engine.rs  hoare.rs  lib.rs  nl2contract.rs  predicates.rs  specification.rs  vc_generator.rs
crates/arreio-dag/: Cargo.toml
crates/arreio-dag/src/: checkpoint.rs  executor.rs  lib.rs  score.rs  shadow_git.rs  todo.rs  workspace.rs
crates/arreio-eqsat/: Cargo.toml
crates/arreio-eqsat/src/: egraph.rs  language.rs  lib.rs  rewrite_rule.rs  saturation_engine.rs
crates/arreio-fsm/: Cargo.toml
crates/arreio-fsm/src/: goal.rs  hitl.rs  lib.rs  ooda_c.rs  problem_space.rs
crates/arreio-gateway/: Cargo.toml
crates/arreio-gateway/assets/: .gitignore  dashboard.html
crates/arreio-gateway/src/: auth.rs  lib.rs  session_store.rs  stream_consumer.rs
crates/arreio-hypervisor/: Cargo.toml
crates/arreio-hypervisor/src/: bash_analyzer.rs  bash_security.rs  file_safety.rs  interceptor.rs  lib.rs  permissions.rs  sandbox.rs  smart_approval.rs  tool_guardrails.rs  watchdog.rs
crates/arreio-kernel/: Cargo.toml
crates/arreio-kernel/src/: blackboard.rs  blackboard_json.rs  blackboard_sqlite.rs  config.rs  lib.rs  persistence.rs  stigmergy.rs  trajectory.rs  variety_engine.rs  vector.rs  vector_hnsw.rs  vsm.rs
crates/arreio-lsp/: Cargo.toml
crates/arreio-lsp/src/: baseline_store.rs  client.rs  lib.rs  protocol.rs  range_shift.rs  (+2 more)
crates/arreio-mcp/: Cargo.toml
crates/arreio-mcp-server/: Cargo.toml
crates/arreio-mcp-server/src/: lib.rs  sandbox.rs
crates/arreio-mcp/src/: client.rs  lib.rs  protocol.rs
crates/arreio-media/: Cargo.toml
crates/arreio-media/src/: lib.rs  stt.rs  tts.rs  vision.rs
crates/arreio-memory/: Cargo.toml
crates/arreio-memory/src/: auto_compressor.rs  auto_lifecycle.rs  chat_consolidator.rs  chunker.rs  consolidator.rs  context_assembler.rs  context_collapse.rs  context_compressor.rs  context_references.rs  engram_cache.rs  envelope.rs  episodic.rs  frozen_snapshot.rs  graph.rs  graph_rag.rs  help_contextual.rs  intent_classifier.rs  lib.rs  lifecycle.rs  llm_summarizer.rs  meta_cognitive.rs  onboarding.rs  procedural.rs  project.rs  recall.rs  semantic.rs  session.rs  session_context.rs  sif.rs  trajectory.rs  transparent_session.rs
crates/arreio-ooda/: Cargo.toml
crates/arreio-problem-space/: Cargo.toml
crates/arreio-problem-space/src/: impasse.rs  lib.rs  operator.rs  problem_space.rs  universal_subgoaling.rs
crates/arreio-provider/: Cargo.toml
crates/arreio-provider/src/: anthropic.rs  azure.rs  circuit.rs  cost_tracker.rs  deepseek.rs  error_classifier.rs  frozen_snapshot.rs  google.rs  lib.rs  llm_hooks.rs  mock.rs  ollama.rs  openai.rs  pool.rs  prompt_caching.rs  prompt_mode.rs  provider.rs  rate_guard.rs  recovery_block.rs  request_classifier.rs  routing_policy.rs  tls_client.rs
crates/arreio-provider/src/fixtures/: deepseek_completion.json
crates/arreio-reasoning/: Cargo.toml
crates/arreio-reasoning/src/: budget.rs  ledger.rs  lib.rs  service.rs
crates/arreio-recovery/: Cargo.toml
crates/arreio-recovery/src/: acceptance_test.rs  lib.rs  multi_model.rs  provider_integration.rs  recovery_block.rs  recovery_cache.rs
crates/arreio-refinement/: Cargo.toml
crates/arreio-scheduler/: Cargo.toml
crates/arreio-security/: Cargo.toml
crates/arreio-skills/: Cargo.toml
crates/arreio-skills/src/: curator.rs  learn.rs  lib.rs  matcher.rs  skill_index.rs  skill_md.rs  skill_preprocessing.rs  store.rs  validator.rs
crates/arreio-slicer/: Cargo.toml
crates/arreio-slicer/src/: backward_slice.rs  context_curation.rs  criterion.rs  forward_slice.rs  lib.rs  slicer.rs
crates/arreio-supercompile/: Cargo.toml
crates/arreio-telemetry/: Cargo.toml
crates/arreio-telemetry/src/: converter.rs  exporter.rs  exporter_otlp.rs  integration.rs  lib.rs  metrics.rs  otel.rs  slo.rs
crates/arreio-tools/: Cargo.toml
crates/arreio-tools/src/: critique.rs  lib.rs  llm_judge.rs  rag.rs  skill_crud.rs  streaming_executor.rs
crates/arreio-tui/: Cargo.toml
crates/arreio-tui/src/: lib.rs
crates/arreio-vault/: Cargo.toml
crates/arreio-vault/src/: api_key_store.rs  auto_rotation.rs  client_registry.rs  keychain.rs  lib.rs  rotation.rs  scanner.rs  vault.rs
crates/arreio-web/: Cargo.toml
examples/plugin-hello/: hello_world.ps1  plugin.yaml
scripts/git-hooks/: pre-commit
tests/e2e/: Cargo.toml
(+42 files in other folders)
