[package]
name = "arreio-a2a"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
arreio-kernel = { path = "../arreio-kernel" }
arreio-gateway = { path = "../arreio-gateway" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
