[package]
name    = "arreio-actors"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
arreio-kernel = { path = "../arreio-kernel" }
arreio-fsm    = { path = "../arreio-fsm" }
arreio-dag    = { path = "../arreio-dag" }
arreio-provider = { path = "../arreio-provider" }

[dev-dependencies]
tempfile = { workspace = true }
