[package]
name = "arreio-autopoiesis"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
arreio-kernel = { path = "../arreio-kernel" }
arreio-ooda = { path = "../arreio-ooda" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
