[package]
name = "arreio-bridge-hermes"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
arreio-mcp-server = { path = "../arreio-mcp-server" }
arreio-a2a = { path = "../arreio-a2a" }
arreio-provider = { path = "../arreio-provider" }
arreio-kernel = { path = "../arreio-kernel" }
arreio-ast = { path = "../arreio-ast" }
arreio-skills = { path = "../arreio-skills" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
