[package]
name = "arreio-eqsat"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
arreio-kernel = { path = "../arreio-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
