[package]
name    = "arreio-hypervisor"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow      = { workspace = true }
thiserror   = { workspace = true }
regex       = { workspace = true }
serde_json  = { workspace = true }
arreio-kernel = { path = "../arreio-kernel" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
