[package]
name = "arreio-mcp-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
arreio-mcp = { path = "../arreio-mcp" }
arreio-kernel = { path = "../arreio-kernel" }
arreio-dag = { path = "../arreio-dag" }
arreio-hypervisor = { path = "../arreio-hypervisor" }
arreio-fsm = { path = "../arreio-fsm" }
arreio-vault = { path = "../arreio-vault" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
