[package]
name = "arreio-problem-space"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
arreio-kernel = { path = "../arreio-kernel" }
arreio-dag = { path = "../arreio-dag" }
arreio-ast = { path = "../arreio-ast" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
