[package]
name    = "arreio-reasoning"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
sha2        = { workspace = true }
arreio-kernel = { path = "../arreio-kernel" }
arreio-fsm    = { path = "../arreio-fsm" }
arreio-provider = { path = "../arreio-provider" }
arreio-memory = { path = "../arreio-memory" }

[dev-dependencies]
tempfile = { workspace = true }
