[package]
name = "arreio-recovery"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
arreio-kernel = { path = "../arreio-kernel" }
arreio-provider = { path = "../arreio-provider" }
arreio-dag = { path = "../arreio-dag" }
arreio-contract = { path = "../arreio-contract" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
