[package]
name    = "arreio-skills"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
regex        = { workspace = true }
arreio-kernel  = { path = "../arreio-kernel" }
arreio-memory  = { path = "../arreio-memory" }
arreio-ast     = { path = "../arreio-ast" }
arreio-security = { path = "../arreio-security" }

[dev-dependencies]
tempfile = { workspace = true }
