[package]
name = "arreio-slicer"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
arreio-kernel = { path = "../arreio-kernel" }
arreio-ast = { path = "../arreio-ast" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
