[package]
name    = "arreio-telemetry"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
regex       = { workspace = true }
arreio-kernel = { path = "../arreio-kernel" }
uuid        = { workspace = true }
sha2        = { workspace = true }
rand        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
